--- a/gamer.css
+++ b/gamer.css
@@ -280,19 +280,21 @@ body .online-games {
     background-position: right;
     background-repeat: no-repeat;
     color: white;
+    
 }
 
 .career-info {
     width: 35%;
     margin-left: 200px;
     margin-top: 50px;
+    padding: 5% 0;
 }
+
 
 .career-info h2 {
     font-size: 48px;
     font-weight: 700;
     line-height: 60px;
-    margin-bottom: 20px;
 }
 
 .career-info p {
@@ -300,6 +302,7 @@ body .online-games {
     font-weight: 400;
     line-height: 30px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .points {
@@ -332,7 +335,7 @@ body .online-games {
     display: flex;
     margin-top: 20px;
     height: 50vh;
-    width: 70%;
+    width: 80%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -348,7 +351,7 @@ body .online-games {
     align-items: center;
     gap:10px;
     border-radius: 328px;
-    width: 210px;
+    width: 230px;
     justify-content: center;
     margin-bottom: 20px;
     box-shadow: 0.1px 0.1px;
