--- a/gamer.css
+++ b/gamer.css
@@ -280,7 +280,7 @@ body .online-games {
     background-position: right;
     background-repeat: no-repeat;
     color: white;
-    
+
 }
 
 .career-info {
@@ -341,18 +341,71 @@ body .online-games {
     text-align: center;
     margin: auto;
 }
+
 .some-games div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 .game-box {
     display: flex;
     align-items: center;
-    gap:10px;
+    gap: 10px;
     border-radius: 328px;
     width: 230px;
     justify-content: center;
     margin-bottom: 20px;
     box-shadow: 0.1px 0.1px;
+}
+
+/* footer section starts here */
+
+footer {
+    background-color: #0B0223;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 70vh;
+    color: white;
+}
+
+.footer-logo {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    display: flex;
+    gap: 20px;
+    padding-top: 40px;
+    margin-bottom: 20px;
+}
+
+.footer-option {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+    justify-content: center;
+    padding-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.footer-icon {
+    margin-top: 50px;
+    padding: 30px;
+    gap: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.alert-line {
+    color: rgba(255, 255, 255, 0.60);
+font-size: 16px;
+font-weight: 500;
+display: flex;
+justify-content: center;
+gap: 55px;
+margin-top: 100px;
 }
