--- a/gamer.css
+++ b/gamer.css
@@ -39,7 +39,8 @@ body .online-games {
 /* header section */
 .head-container {
     display: flex;
-    height: 7vh;
+    height: auto;
+    width: auto;
     justify-content: space-around;
     background: #FFF;
     box-shadow: 0px 4px 30px 1px rgba(0, 0, 0, 0.05);
@@ -51,8 +52,8 @@ body .online-games {
     display: flex;
     width: 40%;
     align-items: center;
-    gap: 5%;
-    margin-left: 15%;
+    gap: 4%;
+    padding-left: 7%;
 }
 
 .logo-text {
@@ -116,7 +117,7 @@ body .online-games {
 }
 
 .banner-info h1 {
-    font-size: 95px;
+    font-size: 5.5rem;
     font-weight: 800;
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
@@ -150,7 +151,6 @@ body .online-games {
     font-size: 20px;
     font-weight: 600;
     border: none;
-    margin-right: 20px;
 }
 
 .btn-2 {
@@ -166,7 +166,7 @@ body .online-games {
 /* gamer secton starts here */
 
 .gamer-container {
-    height: 50vh;
+    height: 500px;
     display: flex;
     padding: 5%;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
@@ -226,11 +226,11 @@ body .online-games {
 /* online games funny videos sections starts here */
 
 .online-games {
-    height: 75vh;
+    height: auto;
     margin-top: 8%;
     text-align: center;
     gap: 0;
-    width: 70%;
+    width: 70%
 }
 
 .online-games h2 {
@@ -243,7 +243,6 @@ body .online-games {
 
 .online-games p {
     color: #534C64;
-    ;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
